--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </header>
 
     <!------- Navigation Bar ------->
-    <nav id="nav" class="bg-indigo-700/90 backdrop-blur-sm text-white sticky top-0 z-50">
+    <nav id="nav" class="bg-black/80 backdrop-blur-sm text-white sticky top-0 z-50">
         <div class="container mx-auto py-4 shadow md:flex md:items-center md:justify-between">
             <div class="flex justify-between items-center basis-1/3 ml-2 md:ml-0">
                     <a href="#">
@@ -57,7 +57,7 @@
                 </span>
             </div>
             <!------- Nav Menu Bar ------->
-            <ul class="md:flex md:items-center basis-2/3 md:static absolute w-full left-0 md:w-auto md:py-0 md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-500 bg-indigo-700/90 md:bg-transparent">
+            <ul class="md:flex md:items-center basis-2/3 md:static absolute w-full left-0 md:w-auto md:py-0 md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-500 bg-black md:bg-transparent">
                 <li class="flex-none mx-4 my-6 md:my-0">
                     <a href="#" class="font-semibold hover:text-purple-400 duration-500">HOME</a>
                 </li>
@@ -401,7 +401,7 @@
                             <a href="http://linkedin.com/in/shahed-al-mahmud" target="_blank">
                                 <i class="fa-brands fa-linkedin text-2xl h-8 rounded-full mx-3" style="color:#0A66C2;"></i>
                             </a>
-                            <a href="https://docs.google.com/document/d/1MWCXVYZEl6aXu4zZst2fEW9qLHkViZyPUMhvJt99Xf0/edit" target="_blank">
+                            <a href="https://docs.google.com/document/d/1U2HzdXgm9SAJURptBRxkYbjiT6OzTz7Q0epU5Mw7WS0" target="_blank">
                                 <i class="fa-solid fa-globe text-2xl h-8 rounded-full mx-3" style="color:#000000;"></i>
                             </a>
                         </div>
@@ -445,14 +445,14 @@
                         </div>
                         <div class="border-b-2 border-purple-500 w-12 mx-auto my-4"></div>
                         <div class="text-center my-4">
-                            <a href="https://github.com/" target="_blank">
-                                <i class="fa-brands fa-github text-2xl h-8 rounded-full mx-3" style="color:#202124;"></i>
+                            <a href="https://www.behance.net/abzaman7/" target="_blank">
+                                <i class="fa-brands fa-square-behance text-2xl h-8 rounded-full mx-3" style="color:#202124;"></i>
                             </a>
                             <a href="https://www.linkedin.com/in/abzaman/" target="_blank">
                                 <i class="fa-brands fa-linkedin text-2xl h-8 rounded-full mx-3" style="color:#0A66C2;"></i>
                             </a>
-                            <a href="https://twitter.com/" target="_blank">
-                                <i class="fa-brands fa-twitter text-2xl h-8 rounded-full mx-3" style="color:#1D9BF0;"></i>
+                            <a href="        dribble: 'https://dribbble.com/ab_designs__/" target="_blank">
+                                <i class="fa-brands fa-square-dribbble text-2xl h-8 rounded-full mx-3" style="color:#202124;"></i>
                             </a>
                         </div>
                     </div>
