nav items hover color change

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
             <!------- Nav Menu Bar ------->
             <ul class="md:flex md:items-center basis-2/3 md:static absolute w-full left-0 md:w-auto md:py-0 md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-500 bg-black/80 md:bg-transparent">
                 <li class="flex-none mx-4 my-6 md:my-0">
-                    <a href="#" class="font-semibold hover:text-purple-400 duration-500">HOME</a>
+                    <a href="#" class="font-semibold hover:text-indigo-600 duration-500">HOME</a>
                 </li>
                 <li class="flex-none mx-4 my-6 md:my-0">
-                    <a href="#service" class="font-semibold hover:text-purple-400 duration-500">SERVICES</a>
+                    <a href="#service" class="font-semibold hover:text-indigo-600 duration-500">SERVICES</a>
                 </li>
                 <li class="flex-none mx-4 my-6 md:my-0">
-                    <a href="#contact" class="font-semibold hover:text-purple-400 duration-500">CONTACT US</a>
+                    <a href="#contact" class="font-semibold hover:text-indigo-600 duration-500">CONTACT US</a>
                 </li>
                 <!------- GitHub | Slack | Email ------->
                 <div class="flex-auto">
