--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="./main/style.css">
     <link rel="stylesheet" href="./public/tailwind-style.css">
-    <link rel="shortcut icon" href="./assets/icon2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/icon1.png" type="image/x-icon">
 
     <!----- Google Font Family ------>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -57,8 +57,8 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="tooltip hover:tooltip-open tooltip-bottom" data-tip="Our GitHub">
-                            <a href="https://github.com/DevsDenBD" target="_blank">
+                        <div class="tooltip hover:tooltip-open tooltip-bottom" data-tip="Our Linkedin">
+                            <a href="https://www.linkedin.com/company/devsdenbd/" target="_blank">
                                 <i class="fa-brands fa-linkedin-in text-2xl"></i>
                             </a>
                         </div>
@@ -106,7 +106,7 @@
         <section class="container mx-auto pb-12 md:pb-0 relative -top-0 md:-top-28">
             <div class="flex flex-wrap gap-8 px-8 md:flex justify-center">
                 <!------- card 1 ------->
-                <div class="group card rounded-none w-96 bg-black/90 hover:bg-white hover:backdrop-blur-sm shadow-2xl">
+                <div class="group card rounded-none w-96 bg-black/90 bg-gradient-to-r hover:from-indigo-200 hover:to-purple-200 hover:backdrop-blur-sm shadow-2xl">
                     <div class="absolute top-0 right-0 h-5 w-5 bg-purple-400/75 backdrop-blur-sm"></div>
                     <div class="card-body relative">
                         <h1 class="card-title font-bold text-2xl text-white group-hover:text-black">SOFTWARE DEVELOPMENT</h1>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <!------- card 3 ------->
-                <div class="group card rounded-none w-96 bg-black/90 hover:bg-white hover:backdrop-blur-sm shadow-2xl">
+                <div class="group card rounded-none w-96 bg-black/90 bg-gradient-to-r hover:from-indigo-200 hover:to-purple-200 hover:backdrop-blur-sm shadow-2xl">
                     <div class="absolute top-0 right-0 h-5 w-5 bg-purple-400/75 backdrop-blur-sm"></div>
                     <div class="card-body relative">
                         <h1 class="card-title font-bold text-2xl text-white group-hover:text-black">CLOUD BASED SERVICES</h1>
