Social link update

--- a/index.html
+++ b/index.html
@@ -452,8 +452,8 @@
                     <a href="https://join.slack.com/t/devsdenbd/shared_invite/zt-1iju8b5f5-ZRvxwnuPiBbz4MkuTbJO8A" target="_blank"><i class="fa-brands fa-slack text-2xl bg-slate-700 text-slate-300 rounded-full p-2 mr-3"></i></a> -->
                     <a href="https://www.facebook.com/DevsDenBD/" target="_blank"><img class="w-12 inline bg-slate-200 rounded-lg p-1.5 mr-3" src="./assets/icon/logo/facebook.ico" alt=""></a>
                     <a href="https://www.linkedin.com/company/devsdenbd/" target="_blank"><img class="w-12 inline bg-slate-200 rounded-lg p-1.5 mr-3" src="./assets/icon/logo/linkedin.ico" alt=""></a>
-                    <a href="https://twitter.com/DevsDenBD" target="_blank"><img class="w-12 inline bg-slate-200 rounded-lg p-1.5 mr-3" src="./assets/icon/logo/twitter.ico" alt=""></a>
-                    <a href="https://github.com/DevsDenBD" target="_blank"><img class="w-12 inline bg-slate-200 rounded-lg p-1.5 mr-3" src="./assets/icon/logo/github.ico" alt=""></a>
+                    <a href="https://twitter.com/DevsDen12" target="_blank"><img class="w-12 inline bg-slate-200 rounded-lg p-1.5 mr-3" src="./assets/icon/logo/twitter.ico" alt=""></a>
+                    <a href="https://github.com/DevsDen1" target="_blank"><img class="w-12 inline bg-slate-200 rounded-lg p-1.5 mr-3" src="./assets/icon/logo/github.ico" alt=""></a>
                     <a href="https://join.slack.com/t/devsdenbd/shared_invite/zt-1iju8b5f5-ZRvxwnuPiBbz4MkuTbJO8A" target="_blank"><img class="w-12 inline bg-slate-200 rounded-lg p-1.5 mr-3" src="./assets/icon/logo/slack.ico" alt=""></a>
                 </div>
             </section>
