navbar align, banner change, banner card paragarphn change, footer updated

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body class="">
     <!------- Navigation Bar ------->
-    <nav id="nav" class="bg-black/80 backdrop-blur-sm text-white sticky top-0 z-50">
+    <nav id="nav" class="bg-slate-900/95 backdrop-blur-sm text-white sticky top-0 z-50">
         <div class="container mx-auto py-4 shadow md:flex md:items-center md:justify-between">
             <div class="flex justify-between items-center basis-1/3 ml-2 md:ml-0">
                     <a href="#">
@@ -37,7 +37,7 @@
                 </span>
             </div>
             <!------- Nav Menu Bar ------->
-            <ul class="md:flex md:items-center basis-2/3 md:static absolute w-full left-0 md:w-auto md:py-0 md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-500 bg-black/80 md:bg-transparent">
+            <ul class="md:flex md:items-center justify-center basis-1/3 md:static absolute w-full left-0 md:w-auto md:py-0 md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-500 bg-black/80 md:bg-transparent">
                 <li class="flex-none mx-4 my-6 md:my-0">
                     <a href="#" class="font-semibold hover:text-indigo-600 duration-500">HOME</a>
                 </li>
@@ -48,42 +48,42 @@
                     <a href="#contact" class="font-semibold hover:text-indigo-600 duration-500">CONTACT US</a>
                 </li>
                 <!------- GitHub | Slack | Email ------->
-                <div class="flex-auto">
-                    <div class="flex flex-wrap md:flex-nowrap md:justify-end items-center gap-6 mx-4 my-6 md:m-0">
-                        <div class="tooltip hover:tooltip-open tooltip-bottom basis-full md:basis-0 order-last md:order-first" data-tip="Book Your Meeting">
-                            <div class="border-2 rounded-full bg-white text-black/80 backdrop-blur-sm font-bold px-3 py-0.5 whitespace-nowrap">
-                                <a href="https://calendly.com/devsden/meeting-at-google-meet?month=2022-12" target="_blank" >
-                                    Book A Call
-                                </a>
-                            </div>
-                        </div>
-                        <div class="tooltip hover:tooltip-open tooltip-bottom" data-tip="Our Linkedin">
-                            <a href="https://www.linkedin.com/company/devsdenbd/" target="_blank">
-                                <i class="fa-brands fa-linkedin-in text-2xl"></i>
-                            </a>
-                        </div>
-                        <div class="tooltip hover:tooltip-open tooltip-bottom" data-tip="Our GitHub">
-                            <a href="https://github.com/DevsDenBD" target="_blank">
-                                <i class="fa-brands fa-github text-2xl"></i>
-                            </a>
-                        </div>
-                        <div class="tooltip hover:tooltip-open tooltip-bottom" data-tip="Join Our Slack">
-                            <a href="https://join.slack.com/t/devsdenbd/shared_invite/zt-1iju8b5f5-ZRvxwnuPiBbz4MkuTbJO8A" target="_blank">
-                                <i class="fa-brands fa-slack text-2xl"></i>
-                            </a>
-                        </div>
-                        <div class="visible md:hidden">
-                            <a href="#email">
-                                <i class="fa-solid fa-envelope md:hidden text-2xl"></i>
+            </ul>
+            <div class="flex-auto">
+                <div class="flex flex-wrap md:flex-nowrap md:justify-end items-center gap-6 mx-4 my-6 md:m-0">
+                    <div class="tooltip hover:tooltip-open tooltip-bottom basis-1/3 md:basis-0 order-last md:order-first" data-tip="Book Your Meeting">
+                        <div class="border-2 rounded-full bg-white text-black/80 backdrop-blur-sm font-bold px-3 py-0.5 whitespace-nowrap">
+                            <a href="https://calendly.com/devsden/meeting-at-google-meet?month=2022-12" target="_blank" >
+                                Book A Call
                             </a>
                         </div>
                     </div>
+                    <div class="tooltip hover:tooltip-open tooltip-bottom" data-tip="Our Linkedin">
+                        <a href="https://www.linkedin.com/company/devsdenbd/" target="_blank">
+                            <i class="fa-brands fa-linkedin-in text-2xl"></i>
+                        </a>
+                    </div>
+                    <div class="tooltip hover:tooltip-open tooltip-bottom" data-tip="Our GitHub">
+                        <a href="https://github.com/DevsDenBD" target="_blank">
+                            <i class="fa-brands fa-github text-2xl"></i>
+                        </a>
+                    </div>
+                    <div class="tooltip hover:tooltip-open tooltip-bottom" data-tip="Join Our Slack">
+                        <a href="https://join.slack.com/t/devsdenbd/shared_invite/zt-1iju8b5f5-ZRvxwnuPiBbz4MkuTbJO8A" target="_blank">
+                            <i class="fa-brands fa-slack text-2xl"></i>
+                        </a>
+                    </div>
+                    <div class="visible md:hidden">
+                        <a href="#email">
+                            <i class="fa-solid fa-envelope md:hidden text-2xl"></i>
+                        </a>
+                    </div>
                 </div>
-            </ul>
+            </div>
         </div>
     </nav>
     <!------- Header Banner Section -------> 
-    <section class="bg-no-repeat bg-cover bg-center relative -top-20 md:-top-16 min-h-[60vh]" style="background-image: url(./assets/banner.jpg)">
+    <section class="bg-no-repeat bg-cover bg-center relative -top-20 md:-top-16 min-h-[60vh]" style="background-image: url(./assets/rear-view-programmer-working-all-night-long.jpg)">
         <!-- <img src="./assets/banner.jpg" alt=""> -->
         <!-- <div class="container mx-auto text-center relative top-32">
             <h3 class="underline underline-offset-8 font-semibold text-[2vw] lg:text-[1vw] text-slate-300">
@@ -106,27 +106,27 @@
         <section class="container mx-auto pb-12 md:pb-0 relative -top-0 md:-top-28">
             <div class="flex flex-wrap gap-8 px-8 md:flex justify-center">
                 <!------- card 1 ------->
-                <div class="group card rounded-none w-96 bg-black/90 bg-gradient-to-r hover:from-indigo-200 hover:to-purple-200 hover:backdrop-blur-sm shadow-2xl">
+                <div class="group card rounded-none w-96 bg-slate-900/95 bg-gradient-to-r hover:from-indigo-200 hover:to-purple-200 hover:backdrop-blur-sm shadow-2xl">
                     <div class="absolute top-0 right-0 h-5 w-5 bg-purple-400/75 backdrop-blur-sm"></div>
                     <div class="card-body relative">
-                        <h1 class="card-title font-bold text-2xl text-white group-hover:text-black">SOFTWARE DEVELOPMENT</h1>
-                        <p class="py-4 text-slate-300 group-hover:text-slate-700 font-semibold">When an unknown printer took a galley type book.</p>
+                        <h1 class="card-title font-bold text-2xl text-white group-hover:text-black mx-auto">SOFTWARE DEVELOPMENT</h1>
+                        <p class="py-4 text-slate-300 group-hover:text-slate-700 font-semibold text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
                     </div>
                 </div>
                 <!------- card 2 ------->
-                <div class="group card rounded-none w-96 bg-white hover:bg-black/90 hover:backdrop-blur-sm shadow-2xl">
+                <div class="group card rounded-none w-96 bg-slate-900/95 bg-gradient-to-r hover:from-indigo-200 hover:to-purple-200 hover:backdrop-blur-sm shadow-2xl">
                     <div class="absolute top-0 right-0 h-5 w-5 bg-purple-400/75 backdrop-blur-sm"></div>
                     <div class="card-body relative">
-                        <h1 class="card-title font-bold text-2xl group-hover:text-white">SOFTWARE TESTING</h1>
-                        <p class="py-4 text-slate-700 group-hover:text-slate-300 font-semibold">When an unknown printer took a galley type book.</p>
+                        <h1 class="card-title font-bold text-2xl text-white group-hover:text-black mx-auto">SOFTWARE TESTING</h1>
+                        <p class="py-4 text-slate-300 group-hover:text-slate-700 font-semibold text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
                     </div>
                 </div>
                 <!------- card 3 ------->
-                <div class="group card rounded-none w-96 bg-black/90 bg-gradient-to-r hover:from-indigo-200 hover:to-purple-200 hover:backdrop-blur-sm shadow-2xl">
+                <div class="group card rounded-none w-96 bg-slate-900/95 bg-gradient-to-r hover:from-indigo-200 hover:to-purple-200 hover:backdrop-blur-sm shadow-2xl">
                     <div class="absolute top-0 right-0 h-5 w-5 bg-purple-400/75 backdrop-blur-sm"></div>
                     <div class="card-body relative">
-                        <h1 class="card-title font-bold text-2xl text-white group-hover:text-black">CLOUD BASED SERVICES</h1>
-                        <p class="py-4 text-slate-300 group-hover:text-slate-700 font-semibold">When an unknown printer took a galley type book.</p>
+                        <h1 class="card-title font-bold text-2xl text-white group-hover:text-black mx-auto">CLOUD BASED SERVICES</h1>
+                        <p class="py-4 text-slate-300 group-hover:text-slate-700 font-semibold text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
                     </div>
                 </div>
                 <!-- ----- card 3 -----
@@ -149,7 +149,7 @@
         <!-----------------------------------
             SERVICES SECTION
         ------------------------------------>
-        <section id="service" class="bg-slate-800 text-white py-12">
+        <section id="service" class="bg-slate-800 text-white py-12 relative -top-12">
             <div class="container mx-auto">
                 <h2 class="font-bold text-2xl md:text-3xl text-indigo-600 px-4 md:px-0 pb-2"><i class="fa-solid fa-minus"></i> What We're Offering to Our Clients</h2>
                 <div class="grid grid-cols-1 lg:grid-cols-2 justify-center lg:gap-48 pb-12 px-4 md:px-0">
@@ -473,7 +473,7 @@
                     <h2 class="text-2xl font-semibold pb-4 text-white">Queries</h2>
                     <div class="border-b-2 border-purple-500 w-12 mb-4"></div>
                     <p class="text-justify">We would love to here about your ideas and discuss how we can help you to reach your ultimate goal. Please send us email to get in touch and possible discussion schedule.</p>
-                    <form action="mailto: devsdenbd2022@gmail.com" method="POST" enctype="application/x-www-form-urlencoded">
+                    <form action="mailto: Info@devsdenbd.com" method="POST" enctype="application/x-www-form-urlencoded">
                         <input type="email" name="email" id="email" placeholder="Email Address"
                             class="mt-4 px-3 py-2.5 w-4/6">
                         <button type="submit"><i class="fa-solid fa-paper-plane bg-slate-700 border-none p-3.5"></i></button>
@@ -483,8 +483,8 @@
                     <h2 id="contact" class="text-2xl font-semibold pb-4 text-white">Contact</h2>
                     <div class="border-b-2 border-purple-500 w-12 mb-4"></div>
                     <p class="whitespace-nowrap"><i class="fa-sharp fa-solid fa-phone-volume text-slate-300 mr-2"></i> +880 17777 00000</p>
-                    <p class="whitespace-nowrap"><i class="fa-solid fa-envelope text-slate-300 mr-2"></i> devsdenbd2022@gmail.com</p>
-                    <p><i class="fa-solid fa-location-dot text-slate-300 mr-2"></i>Mirpur-1, Dhaka</p>
+                    <p class="whitespace-nowrap"><i class="fa-solid fa-envelope text-slate-300 mr-2"></i> Info@devsdenbd.com</p>
+                    <p><i class="fa-solid fa-location-dot text-slate-300 mr-3"></i> Mirpur-1, Dhaka</p>
                 </section>
             </section>
         </section>
