--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             </a>
                         </li>
                         <li class="tooltip hover:tooltip-open hover:text-indigo-600 tooltip-bottom" data-tip="Our GitHub">
-                            <a href="https://github.com/devsden1" target="_blank">
+                            <a href="https://github.com/devsdenbd" target="_blank">
                                 <i class="fa-brands fa-github text-2xl"></i>
                             </a>
                         </li>
@@ -513,13 +513,8 @@
                     <a href="https://www.facebook.com/DevsDenBD/" target="_blank"><i class="fa-brands fa-facebook text-2xl bg-slate-700 text-slate-200 rounded-full w-10 h-10 text-center py-2 mr-3"></i></a>
                     <a href="https://www.linkedin.com/company/devsdenbd/" target="_blank"><i class="fa-brands fa-linkedin-in text-2xl bg-slate-700 text-slate-200 rounded-full w-10 h-10 text-center py-2 mr-3"></i></a>
                     <a href="https://twitter.com/DevsDenBD" target="_blank"><i class="fa-brands fa-twitter text-2xl bg-slate-700 text-slate-200 rounded-full w-10 h-10 text-center py-2 mr-3"></i></a>
-                    <a href="https://github.com/DevsDen1" target="_blank"><i class="fa-brands fa-github text-2xl bg-slate-700 text-slate-200 rounded-full w-10 h-10 text-center py-2 mr-3"></i></a>
+                    <a href="https://github.com/devsdenbd" target="_blank"><i class="fa-brands fa-github text-2xl bg-slate-700 text-slate-200 rounded-full w-10 h-10 text-center py-2 mr-3"></i></a>
                     <a href="https://join.slack.com/t/devsdenbd/shared_invite/zt-1iju8b5f5-ZRvxwnuPiBbz4MkuTbJO8A" target="_blank"><i class="fa-brands fa-slack text-2xl bg-slate-700 text-slate-200 rounded-full w-10 h-10 text-center py-2 mr-3"></i></a>
-                    <!-- <a href="https://www.facebook.com/DevsDenBD/" target="_blank"><img class="w-12 inline bg-slate-200 rounded-lg p-1.5 mr-3" src="./assets/icon/logo/facebook.ico" alt=""></a>
-                    <a href="https://www.linkedin.com/company/devsdenbd/" target="_blank"><img class="w-12 inline bg-slate-200 rounded-lg p-1.5 mr-3" src="./assets/icon/logo/linkedin.ico" alt=""></a>
-                    <a href="https://twitter.com/devsdenbd" target="_blank"><img class="w-12 inline bg-slate-200 rounded-lg p-1.5 mr-3" src="./assets/icon/logo/twitter.ico" alt=""></a>
-                    <a href="https://github.com/DevsDen1" target="_blank"><img class="w-12 inline bg-slate-200 rounded-lg p-1.5 mr-3" src="./assets/icon/logo/github.ico" alt=""></a>
-                    <a href="https://join.slack.com/t/devsdenbd/shared_invite/zt-1iju8b5f5-ZRvxwnuPiBbz4MkuTbJO8A" target="_blank"><img class="w-12 inline bg-slate-200 rounded-lg p-1.5 mr-3" src="./assets/icon/logo/slack.ico" alt=""></a> -->
                 </div>
             </section>
             <section class="flex flex-col md:flex-row gap-12 lg:gap-32">
