unusual img clear

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
     </nav>
     <!------- Header Banner Section -------> 
-    <section class="bg-no-repeat bg-cover bg-center relative -top-20 md:-top-16 min-h-[60vh]" style="background-image: url(./assets/rear-view-programmer-working-all-night-long.jpg)">
+    <section class="bg-no-repeat bg-cover bg-center relative -top-20 md:-top-16 min-h-[60vh]" style="background-image: url(./assets/banner.jpg)">
     </section>
 
     <main class="">
