--- a/index.html
+++ b/index.html
@@ -52,13 +52,6 @@
                 <!------- GitHub | Slack | Email ------->
                 <li class="basis-1/2">
                     <ul class="flex flex-wrap md:flex-nowrap md:justify-end items-center gap-6 mx-4 my-6 md:m-0">
-                        <li class="tooltip hover:tooltip-open tooltip-bottom basis-full md:basis-0 order-last md:order-first" data-tip="Book Your Meeting">
-                            <div class="rounded-full bg-white hover:bg-indigo-500 hover:text-white text-black/80 backdrop-blur-sm font-bold px-3 py-0.5 whitespace-nowrap">
-                                <a href="https://calendly.com/devsdenbd/let-s-talk" target="_blank" >
-                                    Book A Call
-                                </a>
-                            </div>
-                        </li>
                         <li class="tooltip hover:tooltip-open hover:text-indigo-500 tooltip-bottom" data-tip="Our Linkedin">
                             <a href="https://www.linkedin.com/company/devsdenbd/" target="_blank">
                                 <i class="fa-brands fa-linkedin-in text-2xl"></i>
@@ -78,6 +71,13 @@
                             <a href="#email">
                                 <i class="fa-solid fa-envelope md:hidden text-2xl"></i>
                             </a>
+                        </li>
+                        <li class="tooltip hover:tooltip-open tooltip-bottom basis-full md:basis-0" data-tip="Book Your Meeting">
+                            <div class="bg-white hover:bg-indigo-500 hover:text-white text-black font-semibold backdrop-blur-sm px-4 py-1 whitespace-nowrap">
+                                <a href="https://calendly.com/devsdenbd/let-s-talk" target="_blank" >
+                                    Book A Call
+                                </a>
+                            </div>
                         </li>
                     </ul>
                 </>
