--- a/index.html
+++ b/index.html
@@ -98,24 +98,25 @@
                 <div class="group card rounded-none w-96 bg-slate-900/95 bg-gradient-to-r hover:from-indigo-100 hover:to-purple-100 hover:backdrop-blur-sm border-slate-800">
                     <div class="absolute top-0 right-0 h-5 w-5 bg-purple-400/95 backdrop-blur-sm"></div>
                     <div class="card-body relative">
-                        <h1 class="card-title font-bold text-xl text-white group-hover:text-black mx-auto text-center">SOFTWARE DEVELOPMENT</h1>
-                        <p class="py-4 text-slate-300 group-hover:text-slate-700 text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
+                        <h1 class="card-title font-bold text-2xl text-white group-hover:text-black mx-auto text-center">Software Development</h1>
+                        <p class="py-4 text-slate-300 group-hover:text-slate-700 text-justify justify-center text-align: justify">By decreasing complexity and providing excellent client experiences, we develop applications that help the business be more innovative and disruptive.</p>
                     </div>
                 </div>
                 <!------- card 2 ------->
                 <div class="group card rounded-none w-96 bg-slate-900/95 bg-gradient-to-r hover:from-indigo-100 hover:to-purple-100 hover:backdrop-blur-sm shadow-2xl">
                     <div class="absolute top-0 right-0 h-5 w-5 bg-purple-400/95 backdrop-blur-sm"></div>
                     <div class="card-body relative">
-                        <h1 class="card-title font-bold text-xl text-white group-hover:text-black mx-auto">SOFTWARE TESTING</h1>
-                        <p class="py-4 text-slate-300 group-hover:text-slate-700 text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
+                        <h1 class="card-title font-bold text-2xl text-white group-hover:text-black mx-auto">Software Testing</h1>
+                        <p class="py-4 text-slate-300 group-hover:text-slate-700 text-justify justify-center text-align: justify">In terms of cost, time, and quality for your applications, our software testing strategy achieves the finest balance.
+                            High time-to-market is what this indicates.</p>
                     </div>
                 </div>
                 <!------- card 3 ------->
                 <div class="group card rounded-none w-96 bg-slate-900/95 bg-gradient-to-r hover:from-indigo-100 hover:to-purple-100 hover:backdrop-blur-sm shadow-2xl">
                     <div class="absolute top-0 right-0 h-5 w-5 bg-purple-400/95 backdrop-blur-sm"></div>
                     <div class="card-body relative">
-                        <h1 class="card-title font-bold text-xl text-white group-hover:text-black mx-auto">CLOUD BASED SERVICES</h1>
-                        <p class="py-4 text-slate-300 group-hover:text-slate-700 text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
+                        <h1 class="card-title font-bold text-2xl text-white group-hover:text-black mx-auto">Cloud Services</h1>
+                        <p class="py-4 text-slate-300 group-hover:text-slate-700 text-justify justify-center text-align: justify">For increased efficiency and scalability, we move applications and set up contemporary cloud infrastructures.</p>
                     </div>
                 </div>
             </div>
@@ -129,7 +130,6 @@
                 <h2 class="font-bold text-2xl md:text-3xl text-indigo-600 px-4 md:px-0 pb-2"><i class="fa-solid fa-minus"></i> What We're Offering to Our Clients</h2>
                 <div class="grid grid-cols-1 lg:grid-cols-2 justify-center lg:gap-48 pb-12 px-4 md:px-0">
                     <h1 class="font-bold text-3xl md:text-5xl pb-8">Dealing in all Professional IT Services</h1>
-                    <p class="text-justify pb-8">There are many variations of passages of available but majority have suffered alteration in some form, by humou or randomised words which don't look ever slightly believable.</p>
                 </div>
 
                 <!--------------------------
@@ -237,7 +237,6 @@
             <h2 class="font-bold text-2xl md:text-3xl text-indigo-600 px-4 md:px-0 py-2"><i class="fa-solid fa-minus"></i> Our Expert People</h2>
             <div class="grid grid-cols-1 lg:grid-cols-2 justify-center lg:gap-48 pb-12 px-4 md:px-0">
                 <h1 class="font-bold text-3xl md:text-5xl pb-8">Meet Our Professional Team Members</h1>
-                <p class="text-justify pb-8">There are many variations of passages of available but majority have suffered alteration in some form, by humou or randomised words which don't look ever slightly believable.</p>
             </div>
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
@@ -251,7 +250,7 @@
                                 <div class="text-center">
                                     <h2 class="font-semibold">Md Shahnewaz Zaman</h2>
                                     <p class="text-slate-500">Tech Lead</p>
-                                    <p class="font-semibold"><small>Leader</small></p>
+                                    <p class="font-semibold"><small>CTO</small></p>
                                 </div>
                                 <div class="border-b-2 border-purple-500 w-12 mx-auto my-4"></div>
                                 <div class="text-center my-4">
@@ -281,7 +280,7 @@
                                 <div class="text-center">
                                     <h2 class="font-semibold">Md. Mahbubur Rahman (TOM)</h2>
                                     <p class="text-slate-500">SQA Engineer</p>
-                                    <p class="font-semibold"><small>Specialized in Automation</small></p>
+                                    <p class="font-semibold"><small>Manual & Automation</small></p>
                                 </div>
                                 <div class="border-b-2 border-purple-500 w-12 mx-auto my-4"></div>
                                 <div class="text-center my-4">
@@ -308,7 +307,7 @@
                                 <div class="text-center">
                                     <h2 class="font-semibold">Talha Bin Ashraf</h2>
                                     <p class="text-slate-500">SQA Engineer</p>
-                                    <p class="font-semibold"><small>Specialized in Automation</small></p>
+                                    <p class="font-semibold"><small>Manual & Automation</small></p>
                                 </div>
                                 <div class="border-b-2 border-purple-500 w-12 mx-auto my-4"></div>
                                 <div class="text-center my-4">
@@ -335,7 +334,7 @@
                                 <div class="text-center">
                                     <h2 class="font-semibold">Asif Iqbal</h2>
                                     <p class="text-slate-500">SQA Engineer</p>
-                                    <p class="font-semibold"><small>ISTQB Certified</small></p>
+                                    <p class="font-semibold"><small>Manual & Automation</small></p>
                                 </div>
                                 <div class="border-b-2 border-purple-500 w-12 mx-auto my-4"></div>
                                 <div class="text-center my-4">
@@ -362,7 +361,7 @@
                                 <div class="text-center">
                                     <h2 class="font-semibold">Muhibullah</h2>
                                     <p class="text-slate-500">Senior Software Developer</p>
-                                    <p class="font-semibold"><small>Front-End</small></p>
+                                    <p class="font-semibold"><small>Front-End Development</small></p>
                                 </div>
                                 <div class="border-b-2 border-purple-500 w-12 mx-auto my-4"></div>
                                 <div class="text-center my-4">
@@ -389,7 +388,7 @@
                                 <div class="text-center">
                                     <h2 class="font-semibold">Shahed Al Mahmud</h2>
                                     <p class="text-slate-500">Senior Software Developer</p>
-                                    <p class="font-semibold"><small>Back-End</small></p>
+                                    <p class="font-semibold"><small>Back-End Development</small></p>
                                 </div>
                                 <div class="border-b-2 border-purple-500 w-12 mx-auto my-4"></div>
                                 <div class="text-center my-4">
@@ -442,8 +441,8 @@
                             <div class="my-4">
                                 <div class="text-center">
                                     <h2 class="font-semibold">A.B. Zaman</h2>
-                                    <p class="text-slate-500">Identity Designer</p>
-                                    <p class="font-semibold"><small>UI/UX Designer</small></p>
+                                    <p class="text-slate-500">UI/UX Designer</p>
+                                    <p class="font-semibold"><small>Identity & Brand Management</small></p>
                                 </div>
                                 <div class="border-b-2 border-purple-500 w-12 mx-auto my-4"></div>
                                 <div class="text-center my-4">
