--- a/index.html
+++ b/index.html
@@ -110,11 +110,8 @@
                     class="group card rounded-none w-96 bg-slate-900/95 bg-gradient-to-r hover:from-indigo-100 hover:to-purple-100 hover:backdrop-blur-sm border-slate-800">
                     <div class="absolute top-0 right-0 h-5 w-5 bg-purple-400/95 backdrop-blur-sm"></div>
                     <div class="card-body relative">
-                        <h1 class="card-title font-bold text-xl text-white group-hover:text-black mx-auto text-center">
-                            SOFTWARE DEVELOPMENT</h1>
-                        <p class="py-4 text-slate-300 group-hover:text-slate-700 text-justify">Lorem Ipsum is simply
-                            dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-                            standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
+                        <h1 class="card-title font-bold text-xl text-white group-hover:text-black mx-auto text-center">Software Development</h1>
+                        <p class="py-4 text-slate-300 group-hover:text-slate-700 text-justify">By decreasing complexity and providing excellent client experiences, we develop applications that help the business be more innovative and disruptive.</p>
                     </div>
                 </div>
                 <!------- card 2 ------->
@@ -122,11 +119,8 @@
                     class="group card rounded-none w-96 bg-slate-900/95 bg-gradient-to-r hover:from-indigo-100 hover:to-purple-100 hover:backdrop-blur-sm shadow-2xl">
                     <div class="absolute top-0 right-0 h-5 w-5 bg-purple-400/95 backdrop-blur-sm"></div>
                     <div class="card-body relative">
-                        <h1 class="card-title font-bold text-xl text-white group-hover:text-black mx-auto">SOFTWARE
-                            TESTING</h1>
-                        <p class="py-4 text-slate-300 group-hover:text-slate-700 text-justify">Lorem Ipsum is simply
-                            dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-                            standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
+                        <h1 class="card-title font-bold text-xl text-white group-hover:text-black mx-auto">Software Testing</h1>
+                        <p class="py-4 text-slate-300 group-hover:text-slate-700 text-justify">In terms of cost, time, and quality for your applications, our software testing strategy achieves the finest balance. High time-to-market is what this indicates.</p>
                     </div>
                 </div>
                 <!------- card 3 ------->
@@ -134,11 +128,8 @@
                     class="group card rounded-none w-96 bg-slate-900/95 bg-gradient-to-r hover:from-indigo-100 hover:to-purple-100 hover:backdrop-blur-sm shadow-2xl">
                     <div class="absolute top-0 right-0 h-5 w-5 bg-purple-400/95 backdrop-blur-sm"></div>
                     <div class="card-body relative">
-                        <h1 class="card-title font-bold text-xl text-white group-hover:text-black mx-auto">CLOUD BASED
-                            SERVICES</h1>
-                        <p class="py-4 text-slate-300 group-hover:text-slate-700 text-justify">Lorem Ipsum is simply
-                            dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-                            standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
+                        <h1 class="card-title font-bold text-xl text-white group-hover:text-black mx-auto">Cloud Services</h1>
+                        <p class="py-4 text-slate-300 group-hover:text-slate-700 text-justify">For increased efficiency and scalability, we move applications and set up contemporary cloud infrastructures.</p>
                     </div>
                 </div>
             </div>
@@ -400,8 +391,7 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide bg-cover bg-center w-72 mx-6 blurr">
                             <!------- Md Shahnewaz Zaman ------->
-                            <section
-                                class="w-72 p-4 bg-gradient-to-br from-indigo-200 via-purple-100 to-indigo-200 hover:from-indigo-300 hover:via-slate-100 hover:to-indigo-300 relative">
+                            <section class="w-72 p-4 bg-gradient-to-br from-indigo-200 via-purple-100 to-indigo-200 hover:from-indigo-300 hover:via-slate-100 hover:to-indigo-300 relative">
                                 <div class="w-48 mx-auto rounded-full bg-gradient-to-r from-indigo-600 to-purple-500">
                                     <img class="w-48 p-1 rounded-full" src="./assets/team/shahnewaz.jpg"
                                         alt="Md Shahnewaz Zaman">
@@ -432,8 +422,7 @@
                         </div>
                         <div class="swiper-slide bg-cover bg-center w-72 mx-6 blurr">
                             <!-------  Md. Mahbubur Rahman (TOM) ------->
-                            <section
-                                class="w-72 p-4 bg-gradient-to-br from-indigo-200 via-purple-100 to-indigo-200 hover:from-indigo-300 hover:via-slate-100 hover:to-indigo-300 relative">
+                            <section class="w-72 p-4 bg-gradient-to-br from-indigo-200 via-purple-100 to-indigo-200 hover:from-indigo-300 hover:via-slate-100 hover:to-indigo-300 relative">
                                 <div class="w-48 mx-auto rounded-full bg-gradient-to-r from-indigo-600 to-purple-500">
                                     <img class="w-48 p-1 rounded-full" src="./assets/team/mahbubur.jpg"
                                         alt="Md. Mahbubur Rahman">
@@ -461,8 +450,7 @@
                         </div>
                         <div class="swiper-slide bg-cover bg-center w-72 mx-6 blurr">
                             <!------- Talha Bin Ashraf ------->
-                            <section
-                                class="w-72 p-4 bg-gradient-to-br from-indigo-200 via-purple-100 to-indigo-200 hover:from-indigo-300 hover:via-slate-100 hover:to-indigo-300 relative">
+                            <section class="w-72 p-4 bg-gradient-to-br from-indigo-200 via-purple-100 to-indigo-200 hover:from-indigo-300 hover:via-slate-100 hover:to-indigo-300 relative">
                                 <div class="w-48 mx-auto rounded-full bg-gradient-to-r from-indigo-600 to-purple-500">
                                     <img class="w-48 p-1 rounded-full" src="./assets/team/talha.jpg" alt="Developer Amin">
                                 </div>
@@ -489,8 +477,7 @@
                         </div>
                         <div class="swiper-slide bg-cover bg-center w-72 mx-6 blurr">
                             <!------- Asif Iqbal ------->
-                            <section
-                                class="w-72 p-4 bg-gradient-to-br from-indigo-200 via-purple-100 to-indigo-200 hover:from-indigo-300 hover:via-slate-100 hover:to-indigo-300 relative">
+                            <section class="w-72 p-4 bg-gradient-to-br from-indigo-200 via-purple-100 to-indigo-200 hover:from-indigo-300 hover:via-slate-100 hover:to-indigo-300 relative">
                                 <div class="w-48 mx-auto rounded-full bg-gradient-to-r from-indigo-600 to-purple-500">
                                     <img class="w-48 p-1 rounded-full" src="./assets/team/iqbal.jpg" alt="Iqbal">
                                 </div>
@@ -517,8 +504,7 @@
                         </div>
                         <div class="swiper-slide bg-cover bg-center w-72 mx-6 blurr">
                             <!------- Muhibullah ------->
-                            <section
-                                class="w-72 p-4 bg-gradient-to-br from-indigo-200 via-purple-100 to-indigo-200 hover:from-indigo-300 hover:via-slate-100 hover:to-indigo-300 relative">
+                            <section class="w-72 p-4 bg-gradient-to-br from-indigo-200 via-purple-100 to-indigo-200 hover:from-indigo-300 hover:via-slate-100 hover:to-indigo-300 relative">
                                 <div class="w-48 h-48 mx-auto rounded-full bg-gradient-to-r from-indigo-600 to-purple-500">
                                     <img class="w-48 p-1 rounded-full" src="./assets/team/muhib.jpg" alt="Muhibullah">
                                 </div>
@@ -546,8 +532,7 @@
                         </div>
                         <div class="swiper-slide bg-cover bg-center w-72 mx-6 blurr">
                             <!------- Shahed Al Mahmud ------->
-                            <section
-                                class="w-72 p-4 bg-gradient-to-br from-indigo-200 via-purple-100 to-indigo-200 hover:from-indigo-300 hover:via-slate-100 hover:to-indigo-300 relative">
+                            <section class="w-72 p-4 bg-gradient-to-br from-indigo-200 via-purple-100 to-indigo-200 hover:from-indigo-300 hover:via-slate-100 hover:to-indigo-300 relative">
                                 <div class="w-48 mx-auto rounded-full bg-gradient-to-r from-indigo-600 to-purple-500">
                                     <img class="w-48 h-48 p-1 rounded-full" src="./assets/team/shahed.jpg"
                                         alt="Shahed Al Mahmud">
@@ -576,8 +561,7 @@
                         </div>
                         <div class="swiper-slide bg-cover bg-center w-72 mx-6 blurr">
                             <!------- Md Moinur Mahbub ------->
-                            <section
-                                class="w-72 p-4 bg-gradient-to-br from-indigo-200 via-purple-100 to-indigo-200 hover:from-indigo-300 hover:via-slate-100 hover:to-indigo-300 relative">
+                            <section class="w-72 p-4 bg-gradient-to-br from-indigo-200 via-purple-100 to-indigo-200 hover:from-indigo-300 hover:via-slate-100 hover:to-indigo-300 relative">
                                 <div class="w-48 mx-auto rounded-full bg-gradient-to-r from-indigo-600 to-purple-500">
                                     <img class="w-48 p-1 rounded-full" src="./assets/team/amin.jpg" alt="Md Moinur Mahbub">
                                 </div>
@@ -604,8 +588,7 @@
                         </div>
                         <div class="swiper-slide bg-cover bg-center w-72 mx-6 blurr">
                             <!------- A.B. Zaman ------->
-                            <section
-                                class="w-72 p-4 bg-gradient-to-br from-indigo-200 via-purple-100 to-indigo-200 hover:from-indigo-300 hover:via-slate-100 hover:to-indigo-300 relative">
+                            <section class="w-72 p-4 bg-gradient-to-br from-indigo-200 via-purple-100 to-indigo-200 hover:from-indigo-300 hover:via-slate-100 hover:to-indigo-300 relative">
                                 <div class="w-48 mx-auto rounded-full bg-gradient-to-r from-indigo-600 to-purple-500">
                                     <img class="w-48 p-1 rounded-full" src="./assets/team/zaman.jpg" alt="A.B. Zaman">
                                 </div>
