--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                                     <div class="text-center">
                                         <h2 class="font-semibold">Md Shahnewaz Zaman</h2>
                                         <p class="text-slate-700">Tech Lead</p>
-                                        <p class="font-semibold"><small>Leader</small></p>
+                                        <p class="font-semibold"><small>CTO</small></p>
                                     </div>
                                     <div class="border-b-2 border-purple-500 w-12 mx-auto my-4"></div>
                                     <div class="text-center my-4">
@@ -431,7 +431,7 @@
                                     <div class="text-center">
                                         <h2 class="font-semibold">Md. Mahbubur Rahman (TOM)</h2>
                                         <p class="text-slate-700">SQA Engineer</p>
-                                        <p class="font-semibold"><small>Specialized in Automation</small></p>
+                                        <p class="font-semibold"><small>Manual & Automation</small></p>
                                     </div>
                                     <div class="border-b-2 border-purple-500 w-12 mx-auto my-4"></div>
                                     <div class="text-center my-4">
@@ -458,7 +458,7 @@
                                     <div class="text-center">
                                         <h2 class="font-semibold">Talha Bin Ashraf</h2>
                                         <p class="text-slate-700">SQA Engineer</p>
-                                        <p class="font-semibold"><small>Specialized in Automation</small></p>
+                                        <p class="font-semibold"><small>Manual & Automation</small></p>
                                     </div>
                                     <div class="border-b-2 border-purple-500 w-12 mx-auto my-4"></div>
                                     <div class="text-center my-4">
@@ -485,7 +485,7 @@
                                     <div class="text-center">
                                         <h2 class="font-semibold">Asif Iqbal</h2>
                                         <p class="text-slate-700">SQA Engineer</p>
-                                        <p class="font-semibold"><small>ISTQB Certified</small></p>
+                                        <p class="font-semibold"><small>Manual & Automation</small></p>
                                     </div>
                                     <div class="border-b-2 border-purple-500 w-12 mx-auto my-4"></div>
                                     <div class="text-center my-4">
@@ -595,8 +595,8 @@
                                 <div class="my-4">
                                     <div class="text-center">
                                         <h2 class="font-semibold">A.B. Zaman</h2>
-                                        <p class="text-slate-700">Identity Designer</p>
-                                        <p class="font-semibold"><small>UI/UX Designer</small></p>
+                                        <p class="text-slate-700">UI/UX Designer</p>
+                                        <p class="font-semibold"><small>Identity & Brand Management</small></p>
                                     </div>
                                     <div class="border-b-2 border-purple-500 w-12 mx-auto my-4"></div>
                                     <div class="text-center my-4">
